# CIV102-Bridge-Project

./: .gitignore  README.md  deliverable1.py  design0.py  design1.py  design2.py  envelopes.py  final.py  initialization.py  main.py  optimize_cross_section.py  optimize_v_cross_section.py  plot_envelopes.py  plot_safety_factors.py  pyproject.toml
bridge/: __init__.py  cross_section.py  evaluation.py  material.py  prototype.py  utils.py
bridger/: __init__.py  cross_section.py  evaluation.py  material.py  optimization.py  prototype.py  utils.py
