[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "brdiger"
version = "1.0.0"
description = "Help you analyze everything you need to build a strong bridge in the CIV102 course"
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Tianhao Fu", email = "terry.fu@projectneura.org" }
]
dependencies = ["mipcandy", "numpy", "matplotlib"]

[tool.hatch.build.targets.sdist]
only-include = ["bridger"]

[tool.hatch.build.targets.wheel]
packages = ["bridger"]

[project.urls]
Homepage = "https://github.com/ATATC/CIV102-Bridge-Project"
Documentation = "https://github.com/ATATC/CIV102-Bridge-Project"
Repository = "https://github.com/ATATC/CIV102-Bridge-Project"
